<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/playerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"/>
    <ImageView
        android:id="@+id/iv_step_image"
        android:layout_weight="1"
         android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="2">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:padding="5dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/app_name"
        android:textColor="@android:color/black"/>
</ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".7"
        >
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:textSize="@dimen/sp_16"
            android:layout_height="match_parent"
            android:text="@string/prev"
            android:textColor="@android:color/white"
            android:layout_margin="5dp"
            android:id="@+id/prev"/>
        <Button
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:id="@+id/next"
            android:background="@color/colorAccent"
            android:textSize="@dimen/sp_16"
            android:textColor="@android:color/white"
            android:layout_height="match_parent"
            android:text="@string/next"/>
    </LinearLayout>

</LinearLayout>